--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -1,6 +1,15 @@
+/* banner final*/
+
+.final {
+  background-color:  #3f3f3f;
+  color: white;
+}
+.position-sticky {
+  padding-top: 10% !important;
+}
 /*whatsapp inicio*/
 .w-flotante {
-    background-color: green;
+   
     width: 5rem;
     height: 5rem;
     border-radius: 50%;
@@ -19,17 +28,21 @@
     width: 40px;
 }
 /*whatsapp fin*/
+body{
+  background-image: url("../../img/1350.jpg");
+  background-position: center;
+  background-size: cover;
+  margin: 0 !important;
+  padding: 0!important;
+}
 
 .no-gutters {
 	padding-left: 0	!important;
 	padding-right: 0 !important;
+  font-family: 'Fira Sans', sans-serif;
+  
 }
 
-body {
-	
-	padding: 0 	!important;
-	margin: 0 !important;
-}
 /*Carrusel*/
 .carrucel1{
 	background-image: url("../../img/kairos1.jpeg");
@@ -69,14 +82,11 @@ border-left: solid 18px #94a9a4;
 border-right: solid 18px #3f3f3f;
 border-bottom: solid 18px #D9D9D9;
 }
-
-.comunicado {
-	background-color: #94a9a4;
-	.comunicado__index1 {
-	background-color: #8C8C8C;
-}
-.comunicado__index2 {color: black;}
-.comunicado__index3 { font-family: Verdana, Geneva, Tahoma, sans-serif;}
+.indexstaff {
+  display: inline-block;
+  position: relative;
+  margin-left: 20px;
+  margin-bottom: 20px;
 }
 /*estilos para la pagina*/
 .separacion {
@@ -84,14 +94,28 @@ border-bottom: solid 18px #D9D9D9;
 	height: 20px;
 	background-image: linear-gradient( to left, #D9D9D9,#94a9a4,#593E3E )
 }
-#staff3 
-{
-	font-size: 20px;
-  text-align: center;
-}
+
 a:link {color: #8C8C8C ;}
 a:visited {color: #8C8C8C ;}
-a:hover {font-size:150%;}
+.cool-link {
+    display: inline-block;
+    color: #000;
+    text-decoration: none;
+}
+
+.cool-link::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #000;
+    transition: width .3s;
+}
+
+.cool-link:hover::after {
+    width: 100%;
+    //transition: width .3s;
+}
 
 #iconos1{
 	background-color: #D9D9D9;
@@ -104,9 +128,18 @@ a:hover {font-size:150%;}
 	 {
   display: block;
   margin:0 auto;
+  width: 400px;
+  height: 300px;
 }
 
 /*Staff inicio*/ 
+
+.tablastaff{
+  display: block;
+  width: 200px;
+  height: 200px;
+
+}
 
 figure.staffpro{
 padding: 10px;
@@ -142,4 +175,4 @@ background-image: linear-gradient( to right, #D9D9D9,
 .formulario {
 	background-color:  #D9D9D9  ;
 }
-/*Staff fin*/ 
+/*contacto fin*/ 
