--- a/views/INFORMACION PARA PACIENTES.html
+++ b/views/INFORMACION PARA PACIENTES.html
@@ -5,42 +5,50 @@
     <meta charset="utf-8">
     <title> INFORMACION PARA PACIENTES</title>
     <meta name="keywords" content="COVID, CONSULTORIO, PARANA, MEDICOS">
-</head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="../assets/css/estilos.css">
  <link rel="icon" href="../img/icono.ico"> 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+</head>
+<!-- fuente-->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
 <body class="container-fluid no-gutters">
 
-
+<!-- INICIO DEL NAVEGADOR -->
 <header class="row">
 <nav class="col-12">
-<a href="../index.html"><img id="img1" src="../img/logo3.jpeg" alt="Logo"> </a>
+<a href="../index.html"><img id="img1" src="../img/logo3.png" alt="Logo"> </a>
+<br>
 <ul class="nav justify-content-center">
  <li class="nav-item">
-    <a class="nav-link" href="STAFF%20PROFESIONAL.html">STAFF</a>
+    <a class="nav-link cool-link" href="STAFF%20PROFESIONAL.html">STAFF</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="INFORMACION%20PARA%20PACIENTES.html">INFO PARA PACIENTES</a>
+    <a class="nav-link cool-link" href="INFORMACION%20PARA%20PACIENTES.html">INFO PARA PACIENTES</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="CONTACTO.html">CONTACTO</a>
+    <a class="nav-link cool-link" href="NOVEDADES.html">NOVEDADES</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="NOVEDADES.html">NOVEDADES</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="MISION%20Y%20VISION.html">MISION Y VISION</a>
+    <a class="nav-link cool-link" href="Nosotros.html">NOSOTROS</a>
      </li>
+  <li class="nav-item">
+    <a class="nav-link cool-link" href="MISION%20Y%20VISION.html">MISION Y VISION</a>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link cool-link" href="CONTACTO.php">CONTACTO</a>
+    </li>
 </ul>
 </nav>
 </header>
-
+<!-- CIERRE del NAVEGADOR -->
 <br>
 <div class="separacion"></div>
 <br>
+<!-- INICIO DE COMENTARIOS -->
     <div class="container">
-    <p class="text-center" >Derechos y Deberes del los Pacientes</p>
+   <h2><p class="text-center" >Derechos y Deberes del los Pacientes</p></h2>
     <p><b>Al ingresar a nuestra Institución conozca sus derechos y deberes como paciente:</b></p>
     <ul id="iconos1">
       <li>Recibir atención médica con prontitud y competencia, acorde al estado del paciente y
@@ -74,29 +82,28 @@ reglamento interno de nuestra Institución.</li>
 equipamiento, infraestructura, servicios sanitarios y aseo.</li>
 <li>Evitar conductas que interfieran en el bienestar y los derechos de otros pacientes.</li>
 </ul>
-
-
 </div>
+<!-- CIERRE de Comentarios -->
 
-<p id="staff3"><a href="../index.html"> KAIROS  Salud y Bienestar</a></p>
-
-
-
-
-
-
-
+<!-- WHATSAPP -->
 <div class="w-flotante">
   <a href="https://wa.me/5493436221170" target="_blank" class="text-decoration-none"><span class="d-none">WhatsApp
     </span><img src="../img/whatsapp-logo-1.png" class="whatsapp"></a>
 </div>
+<!-- CIERRE de WHATSAPP -->
 
-
-
-
-
-
-
+<!-- banner Final -->
+<section class="position-sticky">
+<div class="final">
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <p class="text-center" ><a class="nav-link" href="../index.html"> KAIROS  Salud y Bienestar</a></p>
+     </li>
+     </ul>
+<p class="text-center">Copyright © 2021.</p> <!-- https://www.facebook.com/ema.taborda -->
+</div>
+</section>
+<!-- Bootstrap -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
