--- a/views/NOVEDADES.html
+++ b/views/NOVEDADES.html
@@ -7,99 +7,107 @@
     <meta name="keywords" content="COVID, CONSULTORIO, PARANA, MEDICOS, Novedades">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="../assets/css/estilos.css">
- <link rel="icon" href="../img/icono.ico"> 
+<link rel="icon" href="../img/icono.ico"> 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
-
 </head>
+<!-- fuente-->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
 <body class="container-fluid no-gutters">
 
-<header class="row">
-<nav class="col-12">
-<a href="../index.html"><img id="img1" src="../img/logo3.jpeg" alt="Logo"> </a>
-<ul class="nav justify-content-center">
- <li class="nav-item">
-    <a class="nav-link" href="STAFF%20PROFESIONAL.html">STAFF</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="INFORMACION%20PARA%20PACIENTES.html">INFO PARA PACIENTES</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="CONTACTO.html">CONTACTO</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="NOVEDADES.html">NOVEDADES</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="MISION%20Y%20VISION.html">MISION Y VISION</a>
-     </li>
-</ul>
-</nav>
-</header>
+  <!-- INICIO DEL NAVEGADOR  -->
+  <header class="row">
+    <nav class="col-12">
+    <a href="../index.html"><img id="img1" src="../img/logo3.png" alt="Logo"> </a>
+    <br>
+    <ul class="nav justify-content-center">
+     <li class="nav-item">
+        <a class="nav-link cool-link" href="STAFF%20PROFESIONAL.html">STAFF</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link cool-link" href="INFORMACION%20PARA%20PACIENTES.html">INFO PARA PACIENTES</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link cool-link" href="NOVEDADES.html">NOVEDADES</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link cool-link" href="Nosotros.html">NOSOTROS</a>
+         </li>
+      <li class="nav-item">
+        <a class="nav-link cool-link" href="MISION%20Y%20VISION.html">MISION Y VISION</a>
+         </li>
+         <li class="nav-item">
+          <a class="nav-link cool-link" href="CONTACTO.php">CONTACTO</a>
+        </li>
+    </ul>
+    </nav>
+    </header>
+    <!-- CIERRE del navegador  -->
+    <br>
+    <div class="separacion"></div>
+    <br>
 
-<br>
-<div class="separacion"></div>
-<br>
-    
-
-<section class="container">
-<p class="text-center">¿Conoces de que se trata el drenaje linfático manual?</p>
-
-
-<p>Es una <b> técnica de masaje manual </b> que consiste en realizar una serie
-de <b> maniobras suaves, lentas y rítmicas que activan y mejoran la
-circulación </b> de la linfa hacia los ganglios facilitando la eliminación de
-toxinas y de <b> exceso de líquidos</b>.</p>
-<p class="text-center">¿Cuándo se indica realizar Drenaje linfático manual?</p>
-<ul id="iconos1">
-  <li>Edemas (hinchazón de extremidades) de causa desconocida o
-de origen post-menopaúsico, frecuentemente en tobillos y
-muslos.</li>
-<li>Durante el embarazo, para reducir la hinchazón y sensación de
-pesadez de piernas.</li>
-<li>Celulitis. El drenaje se acompaña de:<br>
-Ultrasonidos (para deshacer los nódulos de grasa)<br>
-Electroestimulación: Corrientes de lipólisis (rompen los nódulos
-de grasa) y de tonificación de la musculatura.</li>
-<li>Edemas post-quirúrgicos tras realizar liposucciones o extirpación
-de una tumoración.</li>
-<li>Infecciones de garganta, sinusitis (porque se favorece la
-eliminación de gérmenes).</li>
-</ul>
-
-<div class="container">
-
-<p class="text-center">¿Te quedo alguna duda?</p>
-<p class="text-center">Contáctanos:<br></p>
- <p><b>WhatsApp:</b> <a href="https://wa.link/qzv5ff"  >343-6221170</a></p>
-  <p><b>Fijo:</b>343-4075054</p>
-<p><b>Seguinos en:</b> <a href="https://instagram.com/kairossyb?igshid=q9ta4ik26r3x">Instagram</a> y <a href="https://www.facebook.com/Kairos-Salud-y-Bienestar-112220987188893/">Facebook</a></p>
-</div>
+<!-- Inicio Comentarios  -->
+    <section class="container">
+     <h3><p class="text-center">¿Conoces de que se trata el drenaje linfático manual?</p></h3>
+      <p>Es una <b> técnica de masaje manual </b> que consiste en realizar una serie
+      de <b> maniobras suaves, lentas y rítmicas que activan y mejoran la
+      circulación </b> de la linfa hacia los ganglios facilitando la eliminación de
+      toxinas y de <b> exceso de líquidos</b>.</p>
+      <h3><p class="text-center">¿Cuándo se indica realizar Drenaje linfático manual?</p></h3>
+      <ul id="iconos1">
+        <li>Edemas (hinchazón de extremidades) de causa desconocida o
+      de origen post-menopaúsico, frecuentemente en tobillos y
+      muslos.</li>
+      <li>Durante el embarazo, para reducir la hinchazón y sensación de
+      pesadez de piernas.</li>
+      <li>Celulitis. El drenaje se acompaña de:<br>
+      Ultrasonidos (para deshacer los nódulos de grasa)<br>
+      Electroestimulación: Corrientes de lipólisis (rompen los nódulos
+      de grasa) y de tonificación de la musculatura.</li>
+      <li>Edemas post-quirúrgicos tras realizar liposucciones o extirpación
+      de una tumoración.</li>
+      <li>Infecciones de garganta, sinusitis (porque se favorece la
+      eliminación de gérmenes).</li>
+      </ul>
+      <!-- CIERRE de Comentarios -->
+     <h3><p class="text-center">¿Te quedo alguna duda?</p>
+      <p class="text-center">Contáctanos:<br></p> </h3>
+      <section id="iconos1">
+      <div class="text-center container col-12">
+      <p><b>WhatsApp:</b> <a href="https://wa.link/qzv5ff"  >343-6221170</a></p>
+      <p><b>Fijo:</b>343-4075054</p>
+      <p><b>Seguinos en:</b></p> 
+      <ul>
+      <a href="https://instagram.com/kairossyb?igshid=q9ta4ik26r3x">Instagram</a>
+      <br>
+      <a href="https://www.facebook.com/Kairos-Salud-y-Bienestar-112220987188893/">Facebook</a>
+      </ul>
+      </div>
+      </section>
 </section>
+<!-- CIERRE de Comentarios -->
 
-
-<p id="staff3"><a href="../index.html"> KAIROS  Salud y Bienestar</a></p>
-
-
-
-
-
-
-
-
+<!-- Whatsapp -->
 <div class="w-flotante">
   <a href="https://wa.me/5493436221170" target="_blank" class="text-decoration-none"><span class="d-none">WhatsApp
     </span><img src="../img/whatsapp-logo-1.png" class="whatsapp"></a>
 </div>
+<!-- CIERRE de Whatsapp -->
 
+<!-- banner Final -->
+<section class="position-sticky">
+<div class="final">
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <p class="text-center" ><a class="nav-link" href="../index.html"> KAIROS  Salud y Bienestar</a></p>
+     </li>
+     </ul>
+<p class="text-center">Copyright © 2021.</p> <!-- https://www.facebook.com/ema.taborda -->
+</div>
+</section>
 
-
-
-
-
-
-
-
+<!--bootstrap -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
